--- a/contact.html
+++ b/contact.html
@@ -73,33 +73,25 @@
                                     <h4>Head Office</h4>
                                     <p>
                                         Starwood Trading LLC<br>
-                                        Industrial development area <br/>
-                                        Ananthapuram<br/>
-                                        Kasargod, 
-                                        Kerala<br/>
+                                        B 207, Humaid Building,P.O Box 6075 <br/>
+                                        Maysaloon<br/>
+                                        Sharjah, 
+                                        UAE<br/>
                                     </p>
                                 </div>
                             </div>                          
                             <div class="col-md-4">
                                 <div class="address">
-                                    <p>UAE<br/>Name: Sidharth Kuriakose <br/>Email: sidwoodsale@gmail.com <br/>Phone: +971 55 3241 325</p>
+                                    <p>UAE<br/>Name: Sidharth Kuriakose [Sales Manager]<br/>Email: starwoodmena@gmail.com  <br/>Phone: +971-55-3241325</p>
                                 </div>
                             </div>
-							<div class="col-md-4">
-                                <div class="address">
-                                    <p>India<br/>Name: Mathew Philip <br/>Email: <br/>Phone: +91 9496611424</p>
-                                </div>
-                            </div>
+
                             <div class="col-md-4">
                                 <div class="address">
                                     <p>Ghana<br/>Name: Jojo Joseph <br/>Email: info@psjgroup.org.in<br/>Phone: +233 59 911 4586 <br/>Whatsapp: +231 77 744 4859</p>
                                 </div>
                             </div>
-							<div class="col-md-4">
-                                <div class="address">
-                                    <p>Liberia<br/>Email:</p>
-								</div>
-                            </div>
+
                         </div>
                     </div>
             </div>
