--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
 
                             <div class="col-md-4">
                                 <div class="address">
-                                    <p>Ghana<br/>Name: Jojo Joseph <br/>Email: info@psjgroup.org.in<br/>Phone: +233 59 911 4586 <br/>Whatsapp: +231 77 744 4859</p>
+                                    <p>Associate Company: <br/>    Grace group / India & Africa <br/> Address: <br/> Agyaba tower, Prempeh ll st, Adum,<br/> Kumasi, PO Box 840, Ghana, Africa.<br/> www.gracegroup.org.in </p>
                                 </div>
                             </div>
 
