--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,7 @@
                             </div>                          
                             <div class="col-md-4">
                                 <div class="address">
-                                    <p>UAE<br/>Name: Sidharth Kuriakose [Sales Manager]<br/>Email: info@starwoodtradingllc.com , starwoodmena@gmail.com  <br/>Phone: +971-55-3241325 , +971-65-614699 <br/> Whatsapp no: +91-9188530173</p>
+                                    <p>UAE<br/>Name: Sidharth Kuriakose [Sales Manager]<br/>Email: info@starwoodtradingllc.com , starwoodmena@gmail.com  <br/>Phone: +971-55-3241325 , +971-65-614699 <br/> India Phone no: +91-9188530173</p>
                                 </div>
                             </div>
 
