--- a/products.html
+++ b/products.html
@@ -81,9 +81,9 @@
                             </div>
                           </div>
                           <div class="right-container">
-                              <div class="right-content">
-                                <h4>From south America</h4>
-                                <p>Basra locus, (Angelique), Purpleheart, Brown heart, Green heart, wanna, tatawood,makagrin,Rodelokus,Rodekabbes,kawudu,zwartekabbes , bulletrie ,gelekabbes, kopi, tonka, wallaba and many other species as per your demand.
+                              <div class="left-content">
+                                <h4>From Ghana: </h4>  
+                                <p><br><br>Ghana teak sawn size lumber grade
                                 </p>
                               </div>
                           </div>
@@ -96,16 +96,111 @@
                             </div>
                           </div>
                           <div class="right-container">
-                              <div class="right-content">
-                                <h4>From africa </h4>
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
                                 <p>
-                                    Hard woods: 
-                                    Paduk,Iroko(odum),Tali,Azobe(ekki),Dabema,Mahogany,Teak,Sapeli,sipo,Kossipo,and many other species as per customer requirement .we export as round logs or sawn wood 
+                                    <br><br> Ghana teak logs
                                 </p>
                               </div>
                           </div>
                         </div>
-                      
+
+                        <div class="how-container">
+                            <div class="left-container">
+                            <div class="left-content">
+                              <img src="images/p9.jpg">
+                            </div>
+                          </div>
+                          <div class="right-container">
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
+                                <p>
+                                    <br><br> Ghana teak logs
+                                </p>
+                              </div>
+                          </div>
+                        </div>                        
+
+                        <div class="how-container">
+                            <div class="left-container">
+                            <div class="left-content">
+                              <img src="images/p10_a.jpeg">
+                            </div>
+                          </div>
+                          <div class="right-container">
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
+                                <p>
+                                    <br><br> Ghana Tali wood squares
+                                </p>
+                              </div>
+                          </div>
+                        </div>                          
+
+                        <div class="how-container">
+                            <div class="left-container">
+                            <div class="left-content">
+                              <img src="images/p10_b.jpeg">
+                            </div>
+                          </div>
+                          <div class="right-container">
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
+                                <p>
+                                    <br><br> Ghana Tali wood squares
+                                </p>
+                              </div>
+                          </div>
+                        </div>                           
+
+                        <div class="how-container">
+                            <div class="left-container">
+                            <div class="left-content">
+                              <img src="images/p11.jpeg">
+                            </div>
+                          </div>
+                          <div class="right-container">
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
+                                <p>
+                                    <br><br> Ghana Azobe or ekki  logs
+                                </p>
+                              </div>
+                          </div>
+                        </div>                        
+
+                        <div class="how-container">
+                            <div class="left-container">
+                            <div class="left-content">
+                              <img src="images/p12.jpeg">
+                            </div>
+                          </div>
+                          <div class="right-container">
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
+                                <p>
+                                    <br><br> Ghana Azobe or ekki  logs
+                                </p>
+                              </div>
+                          </div>
+                        </div>                              
+
+                        <div class="how-container">
+                            <div class="left-container">
+                            <div class="left-content">
+                              <img src="images/p13.jpeg">
+                            </div>
+                          </div>
+                          <div class="right-container">
+                              <div class="left-content">
+                                <h4>From Ghana:</h4>
+                                <p>
+                                    <br><br> Ghana Iroko and mahogany squares 
+                                </p>
+                              </div>
+                          </div>
+                        </div>   
+
                         <div class="how-container">
                             <div class="left-container">
                             <div class="left-content">
@@ -135,7 +230,7 @@
                                 <p>                                    
                                        
                                     Okume for plywood production
-                                    From India’
+                                    From India,
                                     Sawn Indian teak,mahogany,rosewood ,and wooden handicraft products from our own manufacturing unit. We can give continuous supply of mahogany sawn wood from India as per customer demand 
                                 </p>
                             </div>
