--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <title>Starwood Trading LLC - Contact</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <link rel="shortcut icon" type="image/png" href="images/favicon.png">
     <!-- 
     Stone Template
     http://www.templatemo.com/preview/templatemo_452_stone
