--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3>About Us</h3>
-                    <p>We are a trading company in UAE dealing primarily with African Teak for Indian market. We supply Plantation teak from Ghana to India. We supply teak to timber traders in Tuticorin, Mangalore, Coimbatore, Chennai , Mumbai , Gujarat etc.
+                    <p>We are a general trading company based in UAE supplying african timber to different Asian and Middle east countries. We supply plantation teak from Ghana to India as logs and sawn sizes. Other products we deal are african hardwoods mainly Iroko, Mahogany, Tali, Azobe etc to middle east countries and Asian countries.
                     </p>
                 </div>
                 <div class="col-md-6 text-center">
