--- a/products.html
+++ b/products.html
@@ -162,10 +162,9 @@
                           </div>
                           <div class="right-container">
                               <div class="left-content">
-                                <h4>From Ghana:</h4>
-                                <p>
-                                    <br><br> Ghana Azobe or ekki  logs
-                                </p>
+                                <h4>
+                                     Azobe or ekki  logs
+                                </h4>
                               </div>
                           </div>
                         </div>                        
@@ -178,10 +177,9 @@
                           </div>
                           <div class="right-container">
                               <div class="left-content">
-                                <h4>From Ghana:</h4>
-                                <p>
-                                    <br><br> Ghana Azobe or ekki  logs
-                                </p>
+                                <h4>
+                                    Azobe or ekki  logs
+                                </h4>
                               </div>
                           </div>
                         </div>                              
@@ -213,7 +211,7 @@
                                 <h4>Veneer</h4>
                                 <p>                                     
                                     We have different varieties of sliced veneer 
-                                    Sapele, celtis, chenchen,mahogany,markore,ofram,asamfina,mahogany,afrrican teak ,burls,and many more 
+                                    Sapele, celtis, chenchen,mahogany,markore,ofram,asamfina,mahogany,african teak ,burls,and many more 
                                 </p>
                             </div>
                               </div>
