--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@
 
                             <div class="col-md-4">
                                 <div class="address">
-                                    <p>Associate Company: <br/>    Grace group / India & Africa <br/> Address: <br/> Agyaba tower, Prempeh ll st, Adum,<br/> Kumasi, PO Box 840, Ghana, Africa.<br/> www.gracegroup.org.in </p>
+                                    <!-- <p>Associate Company: <br/>    Grace group / India & Africa <br/> Address: <br/> Agyaba tower, Prempeh ll st, Adum,<br/> Kumasi, PO Box 840, Ghana, Africa.<br/> www.gracegroup.org.in </p> -->
                                 </div>
                             </div>
 
