--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3>About Us</h3>
-                    <p>We are a general trading company based in UAE supplying african timber to different Asian and Middle east countries. We supply plantation teak from Ghana to India as logs and sawn sizes. Other products we deal are african hardwoods mainly Iroko, Mahogany, Tali, Azobe etc to middle east countries and Asian countries.
+                    <p>We are a timber products supplying company based in UAE supplying african timbers & veneers to different Asian and Middle east countries. We supply plantation teak from Ghana to India as logs and sawn sizes. Other products we deal are african hardwoods mainly Iroko, Saphele, Dabema,  Mahogany, Tali, Azobe, Okan, Wawa, Bilinga etc to middle east countries and Asian countries.
+                    </p>
+                    <p> We supply special timber sizes for boat manufacturers and oil engineering companies according to their requirements. We have all types of tropical hardwoods like Iroko, sapele, bilinga, wawa, azobe, okan, tali, dabema etc suitable for there specific works.African tropical hardwoods are suitable for outdoor and it is durable, water resistant & long life both in salt and fresh water use.
                     </p>
                 </div>
                 <div class="col-md-6 text-center">
